@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.imdb.com"
        name="IMDb"
-        version="2.3.5"
+        version="2.4.0"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.themoviedb.org" version="1.0.7"/>
+    <import addon="metadata.common.themoviedb.org" version="2.1.4"/>
     <import addon="metadata.common.movieposterdb.com" version="1.0.5"/>
-    <import addon="metadata.common.imdb.com" version="2.1.5"/>
+    <import addon="metadata.common.imdb.com" version="2.1.9"/>
     <import addon="metadata.common.impa.com" version="1.0.3"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.7"/>
     <import addon="metadata.common.youtubetrailers" version="1.0.4"/>
