@@ -72,7 +72,7 @@
 				<expression>"/company/[^&gt;]+&gt;([^&lt;]+)&lt;/a&gt;</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;outline&gt;\1&lt;/outline&gt;&lt;plot&gt;\1&lt;/plot&gt;" dest="5+">
-				<expression trim="1">&lt;p&gt;\n&lt;p itemprop=&quot;description&quot;&gt;([^&lt;]+)&lt;/p&gt;</expression>
+				<expression trim="1">&lt;p&gt;\n?&lt;p itemprop=&quot;description&quot;&gt;([^&lt;]+)&lt;/p&gt;</expression>
 			</RegExp>
 			<RegExp input="$$2" output="&lt;chain function=&quot;GetIMDBPlotById&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
 				<expression/>
@@ -114,6 +114,9 @@
 				<RegExp input="$$1" output="\2" dest="9">
 					<expression>&lt;meta name=&quot;title&quot; content=&quot;([^&quot;]*?) \([^\(]*?([0-9]{4})\)</expression>
 				</RegExp>
+				<expression/>
+			</RegExp>
+			<RegExp conditional="tmdbtrailer" input="$$2" output="&lt;chain function=&quot;GetTMDBTrailerByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
 				<expression/>
 			</RegExp>
 			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet480p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
