@@ -10,5 +10,5 @@
     <string id="30006">Enable trailers from HD-Trailers.net</string>
     <string id="30007">IMDb Poster &amp; Actor Thumb(s) Size</string>
     <string id="30008">Preferred Title Language from</string>
+    <string id="30009">Enable trailers from themoviedb.org</string>
 </strings>
-
