@@ -10,5 +10,5 @@
     <string id="30006">Filmelőzetes a HD-Trailers.net-ről</string>
     <string id="30007">IMDb poszter &amp; színész bélyegképek mérete</string>
     <string id="30008">Filmcím a következő országból:</string>
+    <string id="30009">Filmelőzetes a themoviedb.org-ról</string>
 </strings>
-
